--- a/staff/adria-arquimbau/express-app/express-app/components/duck-results/index.sass
+++ b/staff/adria-arquimbau/express-app/express-app/components/duck-results/index.sass
@@ -10,6 +10,7 @@
         list-style: none
         padding: 10px
         font-size: 16px
+        margin-top: 8rem
 
     &__item
         list-style: none
