--- a/staff/adria-arquimbau/express-app/express-app/components/header/index.sass
+++ b/staff/adria-arquimbau/express-app/express-app/components/header/index.sass
@@ -5,7 +5,7 @@
     
 .header
     background-color: $secondary-bg-color
-    padding: 30px
+    padding: 0px 30px 30px 30px
     text-align: center
 
     &__title
