add feedbackneed to be fixed

--- a/staff/sylvain-legrill/express-app/components/duck-results/index.sass
+++ b/staff/sylvain-legrill/express-app/components/duck-results/index.sass
@@ -1,7 +1,8 @@
 .duck-results
     @extend %main-content-box
     background-color: $primary-bg-color
-    margin-bottom: 2em
+    margin: auto
+    // margin-bottom: 2em
     &__list
         display: flex
         flex-wrap: wrap
