--- a/staff/sylvain-legrill/express-app/components/lang-selector/index.sass
+++ b/staff/sylvain-legrill/express-app/components/lang-selector/index.sass
@@ -2,7 +2,7 @@
     &__lang-selector
         list-style: none
         display: flex
-        justify-content: flex-end
+        justify-content: center
         margin: 0
         padding: 0
     
@@ -12,3 +12,4 @@
     &__lang-button
         @extend %button
         font-size: 12px
+        border-radius: 20%
