--- a/staff/sylvain-legrill/express-app/components/duck-detail/index.sass
+++ b/staff/sylvain-legrill/express-app/components/duck-detail/index.sass
@@ -12,7 +12,7 @@
         font-size: 2rem
 
     &__photo
-        max-width: 80%
+        // max-width: 80%
 
     &__price
         margin-top: 2em
