--- a/staff/sylvain-legrill/express-app/components/header/index.sass
+++ b/staff/sylvain-legrill/express-app/components/header/index.sass
@@ -11,7 +11,8 @@
         list-style: none
         display: flex
         flex-direction: column
-        align-items: flex-end
+        align-items: center
+        justify-content: center
         margin-top: 5px
         padding: 0
     
