--- a/staff/sylvain-legrill/express-app/public/index.css
+++ b/staff/sylvain-legrill/express-app/public/index.css
@@ -53,7 +53,8 @@
   list-style: none;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
+  justify-content: center;
   margin-top: 5px;
   padding: 0;
 }
@@ -90,7 +91,7 @@
 .header__lang-selector {
   list-style: none;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   margin: 0;
   padding: 0;
 }
@@ -99,6 +100,7 @@
 }
 .header__lang-button {
   font-size: 12px;
+  border-radius: 20%;
 }
 
 .header__search-input {
@@ -144,8 +146,8 @@
 }
 
 .duck-results {
-  background-color: rgba(0, 0, 0, 0.7);
-  margin-bottom: 2em;
+  background-color: rgba(255, 182, 36, 0.5);
+  margin: auto;
 }
 .duck-results__list {
   display: flex;
@@ -161,7 +163,7 @@
 }
 
 .duck-item {
-  margin: 2em;
+  margin: auto;
   border: 2px solid white;
   padding: 1em 2em;
   display: flex;
@@ -179,7 +181,7 @@
 }
 
 .duck-detail {
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(255, 182, 36, 0.5);
   color: white;
   margin-bottom: 2em;
   padding: 3em;
@@ -189,9 +191,6 @@
 }
 .duck-detail__title {
   font-size: 2rem;
-}
-.duck-detail__photo {
-  max-width: 80%;
 }
 .duck-detail__price {
   margin-top: 2em;
