--- a/staff/juan-bovo/express-app/public/style.css
+++ b/staff/juan-bovo/express-app/public/style.css
@@ -32,14 +32,14 @@ body {
   margin-top: 0.25rem;
   margin-bottom: 1rem;
   font-size: 1.1rem;
-  border: 0.2rem solid #ffc56c;
-  border-radius: 0.6rem;
+  border: 0.1rem solid #ffc56c;
+  border-radius: 0.3rem;
 }
 .header__button:hover {
   background-color: tomato;
   color: white;
-  border: 0.2rem solid darkslategray;
-  border-radius: 0.6rem;
+  border: 0.1rem solid darkslategray;
+  border-radius: 0.3rem;
 }
 .header__back-link {
   display: block;
@@ -48,8 +48,8 @@ body {
   text-align: center;
   font-size: 1.1rem;
   color: white;
-  border: 0.2rem solid white;
-  border-radius: 0.6rem;
+  border: 0.1rem solid white;
+  border-radius: 0.3rem;
 }
 .header__back-link:hover {
   background-color: white;
@@ -66,14 +66,15 @@ body {
 }
 .form__text-field {
   display: block;
+  padding-left: 1rem;
   width: 100%;
   max-width: 900px;
   height: 30px;
   margin-top: 0.25rem;
   margin-bottom: 1rem;
   font-size: 1.2rem;
-  border: 0.2rem solid #ffc56c;
-  border-radius: 0.6rem;
+  border: 0.1rem solid #ffc56c;
+  border-radius: 0.3rem;
 }
 .form__list-item {
   list-style-type: none;
@@ -92,8 +93,8 @@ body {
   margin-top: 0.25rem;
   margin-bottom: 1rem;
   font-size: 1.1rem;
-  border: 0.2rem solid #ffc56c;
-  border-radius: 0.6rem;
+  border: 0.1rem solid #ffc56c;
+  border-radius: 0.3rem;
 }
 .form__button:hover {
   color: white;
@@ -124,8 +125,8 @@ body {
   background-color: #ffc56c;
   text-align: center;
   padding: 14px 16px;
-  border: 0.2rem solid darkslategray;
-  border-radius: 0.6rem;
+  border: 0.1rem solid darkslategray;
+  border-radius: 0.3rem;
 }
 .lang-selector__button:hover {
   color: darkslategray;
@@ -169,7 +170,7 @@ body {
   font-size: 1.4rem;
   background-color: rgba(255, 255, 255, 0.1);
   border: 0.1rem solid white;
-  border-radius: 0.6rem;
+  border-radius: 0.3rem;
 }
 .fav-button:hover {
   background-color: rgba(255, 255, 255, 0.3);
