--- a/staff/juan-bovo/express-app/utils/forms.sass
+++ b/staff/juan-bovo/express-app/utils/forms.sass
@@ -8,13 +8,14 @@
 
     &__text-field
         display: block
+        padding-left: 1rem
         width: 100%
         max-width: 900px
         height: 30px
         margin-top: 0.25rem
         margin-bottom: 1rem
         font-size: 1.2rem
-        +round-border(0.2rem, 0.6rem, solid, rgb(255, 197, 108))
+        +round-border(0.1rem, 0.3rem, solid, rgb(255, 197, 108))
 
     &__list-item
         list-style-type: none
@@ -33,7 +34,7 @@
         margin-top: 0.25rem
         margin-bottom: 1rem
         font-size: 1.1rem
-        +round-border(0.2rem, 0.6rem, solid, rgb(255, 197, 108))
+        +round-border(0.1rem, 0.3rem, solid, rgb(255, 197, 108))
 
     &__button:hover
         color: white
