--- a/staff/carolina-zhou/express-app/style/index.sass
+++ b/staff/carolina-zhou/express-app/style/index.sass
@@ -20,3 +20,4 @@
 @import ../components/duck-results
 @import ../components/duck-item
 @import ../components/duck-detail
+@import ../components/feedback
