--- a/staff/lluis-agusti/express-app-pug/components/html/index.pug
+++ b/staff/lluis-agusti/express-app-pug/components/html/index.pug
@@ -4,6 +4,6 @@ html(lang="en")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible" content="ie=edge")
     title Document
-    link(rel="stylesheet" href="/style.css")
+    //- link(rel="stylesheet" href="/style.css")
   body
     block content
