--- a/staff/jorge-garces/express-app/8/style/index.sass
+++ b/staff/jorge-garces/express-app/8/style/index.sass
@@ -6,4 +6,5 @@
 @import ../components/login
 @import ../components/duck-results
 @import ../components/duck-item
+@import ../components/feedback
 @import ../components
