--- a/staff/jorge-garces/express-app/8/public/style.css
+++ b/staff/jorge-garces/express-app/8/public/style.css
@@ -74,6 +74,19 @@ h1 {
   height: auto;
 }
 
+.feedback {
+  background: rgba(36, 36, 36, 0.6);
+  width: 60%;
+  margin: auto;
+  border: 1px solid black;
+  border-radius: 20px;
+  min-height: 20rem;
+  border: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
 * {
   font-family: Verdana;
   font-size: 0.8rem;
