add final version express-app

--- a/staff/christian-haag/express-app/components/duck-detail/index.sass
+++ b/staff/christian-haag/express-app/components/duck-detail/index.sass
@@ -27,3 +27,11 @@
 
         &-link
             margin-right: 25px
+
+@media (min-width: 650px)    
+    %item
+        min-width: 80%
+        margin-left: 10%
+        flex-direction: column
+        
+        
