--- a/staff/christian-haag/express-app/components/duck-result/index.sass
+++ b/staff/christian-haag/express-app/components/duck-result/index.sass
@@ -22,4 +22,12 @@
         &-span
             margin-right: 25px
 
-           
+@media (min-width: 650px)
+    %item-container
+        width: 100%
+        flex-direction: row
+        flex-wrap: wrap  
+
+    %item
+        width: 40%
+        display: flex          
