--- a/staff/christian-haag/express-app/sassfiles/item-settings.sass
+++ b/staff/christian-haag/express-app/sassfiles/item-settings.sass
@@ -22,6 +22,7 @@
     text-decoration: none
     text-align: center
     margin: 10px 0
+    font-family: $thinfont
     color: $purple
 
 %item-image
@@ -33,3 +34,8 @@
     box-shadow: -1px 2px 1px -1px rgba(5,5,5,0.39)
 
 
+      
+    
+    
+    
+    
