--- a/staff/christian-haag/express-app/sassfiles/temp.sass
+++ b/staff/christian-haag/express-app/sassfiles/temp.sass
@@ -3,6 +3,8 @@
     background-color: $feedback
     margin: 30px 15px
     padding: 10px 5px
+    font-family: $thinfont
+    border: 2px solid $lesspurple
     border-radius: 7px
 
 .alert
