--- a/staff/christian-haag/express-app/components/header/index.sass
+++ b/staff/christian-haag/express-app/components/header/index.sass
@@ -42,8 +42,9 @@
         margin-bottom: 15px
 
         &-input
-            width: 40%
-            margin-left: 30%
+            width: 30%
+            height: 20px
+            margin-left: 35%
             border: none
             border-radius: 15px
             padding-left: 5px
@@ -67,4 +68,10 @@
 .name
     color: white
     margin-bottom: 15px
+
+
+
+
+
+
 
