--- a/staff/groups/over-cook-sa/overcooked/style/index.css
+++ b/staff/groups/over-cook-sa/overcooked/style/index.css
@@ -3,16 +3,55 @@
   margin: auto;
 }
 
-.body__background {
-  background-image: url(img/fondo-landing.png);
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-}
-
-.header__landing {
+.landing {
   display: flex;
   width: 100%;
+}
+
+.home {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: #4091cc;
+}
+.home__logo {
+  width: 100%;
+}
+.home__user {
+  display: flex;
+  justify-content: center;
+}
+.home__user__text {
+  margin-bottom: 0.5rem;
+  color: white;
+}
+.home__section {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 0.5rem;
+  margin-left: 6rem;
+  margin-right: 6rem;
+}
+.home__section__buttom {
+  font-size: 0.9rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+  color: white;
+}
+
+.search {
+  display: flex;
+  height: 2rem;
+  margin-bottom: 0.5rem;
+}
+
+.body {
+  height: 100vh;
+  background-image: url("img/fondo-landing.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  height: 100%;
 }
 
 .main__random-section {
@@ -113,9 +152,90 @@
   display: flex;
   justify-content: center;
   text-align: center;
+  box-shadow: 0 4px 6px #bbb;
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 5px 5px 5px 5px;
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px5rem;
   margin: 2rem;
   font-size: 15px;
 }
+.main__nav__text__a {
+  text-decoration: none;
+  text-color: blue;
+}
+.main__home {
+  background-image: url("https://i.pinimg.com/originals/85/5d/c4/855dc497dea9484967fb13036b8d7767.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  margin-bottom: 1.3rem;
+}
+.main__categories {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  margin-bottom: 0.5rem;
+}
+.main__res {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin-top: 2rem;
+}
+.main__res__ul {
+  padding: 0;
+}
+.main__res__list {
+  list-style: none;
+  margin-top: 0.2rem;
+}
+.main__res__img {
+  display: flex;
+  width: 100%;
+  margin-bottom: 0.3rem;
+}
+.main__res__text {
+  margin: 0.5rem;
+  box-shadow: 0 4px 6px #bbb;
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 5px 5px 5px 5px;
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px5rem;
+}
+.main__res__video {
+  box-shadow: 0 4px 6px #bbb;
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 5px 5px 5px 5px;
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px5rem;
+}
+.main__res__a {
+  text-decoration: none;
+  text-color: blue;
+  margin: 0.5rem;
+}
+.main__res__buttom {
+  text-decoration: none;
+  color: white;
+  font-size: 1em;
+  font-weight: bolder;
+  border-radius: 6px;
+  box-shadow: 0 4px 6px #bbb;
+  padding: 0.5rem;
+  background-color: rgba(91, 177, 222, 0.8);
+  margin-bottom: 0.7rem;
+}
+.main__favbuttom {
+  margin-bottom: 0.4rem;
+  margin-top: 0.3rem;
+}
+
 .footer {
   display: flex;
   flex-wrap: wrap;
