--- a/staff/groups/over-cook-sa/overcooked/style/index.sass
+++ b/staff/groups/over-cook-sa/overcooked/style/index.sass
@@ -2,19 +2,46 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
     margin: auto
 
-.body  
 
-    &__background
-        background-image: url(img/fondo-landing.png)
-        background-size: cover
-        width: 100%
-        height: 100%
-
-.header
-
-    &__landing
+.landing
         display: flex
         width: 100%
+.home
+    display: flex
+    flex-direction: column
+    width: 100%
+    background-color: rgba(64, 145, 204)
+    &__logo
+       width: 100%
+    &__user
+        display: flex
+        justify-content: center
+        &__text
+            margin-bottom: 0.5rem
+            color: white
+    &__section
+        display: flex
+        justify-content: space-around
+        margin-bottom: 0.5rem
+        margin-left: 6rem
+        margin-right: 6rem
+        &__buttom
+            font-size: 0.9rem
+            font-family: Verdana, Geneva, Tahoma, sans-serif
+            font-weight: bold
+            color: white
+.search
+    display: flex
+    height: 2rem
+    margin-bottom: 0.5rem
+
+.body
+    height: 100vh
+    background-image: url('img/fondo-landing.png')
+    background-size: cover
+    background-repeat: no-repeat
+    background-attachment: fixed
+    height: 100%
 
 .main
 
@@ -108,9 +135,79 @@
             display: flex
             justify-content: center
             text-align: center
+            box-shadow: 0 4px 6px #bbb
+            background-color: rgba(255, 255, 255, 0.6)
+            padding: 5px 5px 5px 5px
+            border-radius: 3px
+            -moz-border-radius: 3px
+            -webkit-border-radius: 3px5rem
             margin: 2rem
             font-size: 15px
             &__a 
+                text-decoration: none
+                text-color: blue
+    &__home
+        background-image: url('https://i.pinimg.com/originals/85/5d/c4/855dc497dea9484967fb13036b8d7767.jpg')
+        background-size: cover
+        background-repeat: no-repeat
+        background-attachment: fixed
+        margin-bottom: 1.3rem
+
+    &__categories
+        display: flex
+        flex-direction: column
+        justify-content: center
+        align-content: center
+        text-align: center
+        margin-bottom: 0.5rem
+
+    &__res
+        display: flex
+        flex-wrap: wrap
+        flex-direction: column
+        margin-top: 2rem
+        &__ul
+            padding: 0 
+        &__list
+            list-style: none
+            margin-top: 0.2rem
+        &__img
+            display: flex
+            width: 100%
+            margin-bottom: 0.3rem
+        &__text
+            margin: 0.5rem
+            box-shadow: 0 4px 6px #bbb
+            background-color: rgba(255, 255, 255, 0.6)
+            padding: 5px 5px 5px 5px
+            border-radius: 3px
+            -moz-border-radius: 3px
+            -webkit-border-radius: 3px5rem
+        &__video
+            box-shadow: 0 4px 6px #bbb
+            background-color: rgba(255, 255, 255, 0.6)
+            padding: 5px 5px 5px 5px
+            border-radius: 3px
+            -moz-border-radius: 3px
+            -webkit-border-radius: 3px5rem
+        &__a
+            text-decoration: none
+            text-color: blue
+            margin: 0.5rem
+        &__buttom
+            text-decoration: none
+            color: white
+            font-size: 1em
+            font-weight: bolder
+            border-radius: 6px
+            box-shadow: 0 4px 6px #bbb
+            padding: 0.5rem
+            background-color: rgba(91, 177, 222, 0.8)
+            margin-bottom: 0.7rem
+
+    &__favbuttom
+        margin-bottom: 0.4rem
+        margin-top: 0.3rem
 
 .footer
     display: flex
