--- a/staff/jorge-garces/express-app/style/index.sass
+++ b/staff/jorge-garces/express-app/style/index.sass
@@ -7,4 +7,5 @@
 @import ../components/duck-results
 @import ../components/duck-item
 @import ../components/feedback
+@import ../components/duck-favorites
 @import ../components
