--- a/staff/jorge-garces/express-app/components/feedback/index.sass
+++ b/staff/jorge-garces/express-app/components/feedback/index.sass
@@ -8,6 +8,11 @@
     display: flex
     flex-direction: column
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)
+    color: red
+    text-align: center
+
+#redAlert
+    font-size: 2rem
 
 
         
