--- a/staff/jorge-garces/express-app/public/style.css
+++ b/staff/jorge-garces/express-app/public/style.css
@@ -80,11 +80,25 @@ h1 {
   margin: auto;
   border: 1px solid black;
   border-radius: 20px;
-  min-height: 20rem;
   border: 1px solid white;
   display: flex;
   flex-direction: column;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  color: red;
+  text-align: center;
+}
+
+#redAlert {
+  font-size: 2rem;
+}
+
+.imagen {
+  width: 80%;
+  height: auto;
+}
+
+article > p {
+  color: white;
 }
 
 * {
