add styles for login form, register form and detail

--- a/staff/jaume-villarreal/summer-activity-manager/summer-activity-manager-design/style/header.sass
+++ b/staff/jaume-villarreal/summer-activity-manager/summer-activity-manager-design/style/header.sass
@@ -4,7 +4,19 @@
     flex-direction: column
     justify-content: center
     align-items: center
+    font-family: 'Monda', sans-serif
 
-.header--form
-    >h1
-        text-align: center
+    &--form
+        >h1
+            text-align: center
+    &--detail
+        border: 1px solid
+        border-radius: .5rem
+        width: 100%
+        padding: 0 1rem
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        font-size: 2rem
+        .user-name
+            text-align: center
