--- a/staff/jaume-villarreal/summer-activity-manager/summer-activity-manager-design/style/index.sass
+++ b/staff/jaume-villarreal/summer-activity-manager/summer-activity-manager-design/style/index.sass
@@ -1,5 +1,10 @@
 @import ./base-settings
 @import ./logo
+@import ./form
 @import ./header
-@import ../form
+@import ./button
+@import ./panel
+@import ../register-form
+@import ../detail
+@import ../login-form
 
