--- a/staff/oihane-unciti/my-project/desing/html/register-modal.css
+++ b/staff/oihane-unciti/my-project/desing/html/register-modal.css
@@ -1,14 +1,10 @@
 .modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
   padding-top: 100px;
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
+  width: 99vw;
+  height: 99vh;
   overflow: auto;
-  background-color: black;
   background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -19,11 +15,6 @@
   padding: 0;
   border: 1px solid #888;
   width: 80%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  -webkit-animation-name: animatetop;
-  -webkit-animation-duration: 0.4s;
-  animation-name: animatetop;
-  animation-duration: 0.4s;
 }
 
 .close {
@@ -33,11 +24,12 @@
   font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+.close:hover {
   color: #000;
   text-decoration: none;
   cursor: pointer;
+  margin-right: 5px;
+  margin-top: -15px;
 }
 
 .modal__header {
@@ -48,6 +40,16 @@
 
 .modal__body {
   padding: 2px 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  width: 100%;
+}
+
+input {
+  width: 100%;
 }
 
 /*# sourceMappingURL=register-modal.css.map */
