--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-design/templates/space-module/index.html
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-design/templates/space-module/index.html
@@ -10,7 +10,7 @@
     <!-- <link href='https://fonts.googleapis.com/css?family=Armata' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Assistant' rel='stylesheet'> -->
     <link href='https://fonts.googleapis.com/css?family=B612 Mono' rel='stylesheet'>
-    <link rel="stylesheet" href="style/index.css" type="text/css">
+    <link rel="stylesheet" href="../../style/index.css" type="text/css">
     <title>e-cohabitat</title>
 
 </head>
@@ -19,7 +19,7 @@
     <header class="header hidden">
 
         <div>
-            <img src="./img/logo.svg" alt="e-COHABITAT project logo" class="header__logo">
+            <img src="../../img/logo.svg" alt="e-COHABITAT project logo" class="header__logo">
             <nav>
                 <ul class="header__main-menu">
                     <li class="header__item"><a class="header__main-link" href="" title="home">Home</a></li>
@@ -29,8 +29,8 @@
         </div>
             <nav>
                 <ul class="header__secondary-menu">
-                    <li class="header__item"><a class="header__secondary-link" href="" title="Sign up">Sign up</a></li>
-                    <li class="header__item"><a class="header__secondary-link" href="" title="Sign in">Sign in</a></li>
+                    <li class="header__item"><a class="header__secondary-link" title="User area">Username</a></li>
+                    <li class="header__item"><a class="header__secondary-link" href="" title="Sign out">Sign out</a></li>
                 </ul>
             </nav>
 
@@ -38,40 +38,28 @@
 
     <main class="main">
 
-        <img src="./img/logo.svg" alt="e-COHABITAT project logo" class="main__logo">
-
-        <h1 class="main__title"><span class="main__e">e-</span>cohabitat</h1>
-        <h2 class="main__subtitle">Sharing spaces, building communities</h2>
-
-        <nav class="main__mobile-menu">
-            <ul>
-                <li class="main__item"><a class="main__link" href="" title="Sign up">Sign up</a></li>
-                <li class="main__item"><a class="main__link" href="" title="Sign in">Sign in</a></li>
-            </ul>
-        </nav>
-
-        <!-- <section>
-            <h3>Collective housing</h3> 
-            <h4>WHAT</h4> 
-            <p>bla bla bla</p>
-            <h4>WHY</h4>
-            <p>bla bla bla</p>
-        </section>
+        <div class="module">
+            <h1 class="module__title">Kitchen</h1>
+            <p class="module__address">Building Z, 2nd floor</p>
+            <p class="module__users">20 users </p>
+            <a class="module__users-link" href=""><i class="far fa-eye"></i> who?</a>
+                    
+            <figure class="module__figure">
+                <img class="module__img" alt="Arrels Barcelona" src="../../img/space-a.jpg">
+            </figure>          
     
-        <section>
-            <h3><span class="main__e">e-</span>cohabitat</h3>
-            <p>e-<strong>cohabitat</strong> is a project that stems from the will to create and improve communities by providing a platform for the management of shared spaces in collective housing.</p>
-            <p>bla bla bla</p>
-            <p>features + needs stisfied</p>
-            <p>bla bla bla</p>
-        </section> -->
+            <form class="module__form">
+                <button class="module__calendar">General calendar</button>
+                <button class="module__week">What's up today?</button>
+            </form>
+        </div>
 
     </main>
 
     <footer class="footer hidden">
  
         <ul class="footer__menu">
-            <li class="footer__item">e-cohabitat <time datetime="2019">· 2019</time></li>
+            <li class="footer__item">e-cohabitat · 2019</time></li>
             <li class="footer__item"><a class="footer__link" href="#" title="Terms of Service">Terms of Service</a></li>
             <li class="footer__item"><a class="footer__link" href="#" title="Copyright">Copyright</a></li>
             <li class="footer__item"><a class="footer__link" href="#" title="Privacy Policy">Privacy Policy</a></li>
