--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-design/style/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-design/style/index.sass
@@ -5,11 +5,10 @@
     font-size: 1rem
     box-sizing: border-box
 
-@import register
-@import register-success
-@import login
-@import home
-
+html
+    min-width: 350px
+    min-height: 100%
+    
 body
     min-height: 100vh
 
@@ -47,12 +46,12 @@ body
     .header
         display: flex
         justify-content: space-between
-        padding: 2em
+        padding: 1em 2em
 
         &__logo
             width: 100px
         &__main-menu
-            margin-top: 2em
+            margin-top: 1em
             padding: 0
             font-weight: bold
         &__secondary-menu
@@ -71,16 +70,18 @@ body
             color: deeppink
 
     .main
-        padding: 3em 7em
+        padding: 0 7em
         text-align: center
+        min-height: calc(100vh - 80px - 228.8px)
         // landing
         &__e
             font-weight: lighter
             font-size: 1.5rem
         &__title
-            display: initial
+            display: block
             font-family: Helvetica, Roboto, sans-serif
             font-size: 2rem
+            padding-top: 3em
         &__subtitle
             font-weight: normal
             margin-top: 3em
@@ -92,23 +93,31 @@ body
         display: flex
         flex-wrap: wrap
         justify-content: space-between
-        padding: 5em
-        font-size: .25rem
-        position: fixed
-        left: 0
-        bottom: 0
-        width: 100%
+        padding: 2em
 
         &__menu
             display: flex
         &__item
             list-style: none
-            padding-right: 1em
+            padding-right: 2em
+            font-size: .75rem
         &__link
             text-decoration: none
             color: grey
+            font-size: .75rem
         &__link:hover, .fab:hover
             color: deeppink
         .fab
             text-decoration: none
             color: black
+            font-size: .85rem
+            margin: auto -2em auto 2em 
+
+@import ../templates/register/
+@import ../templates/register-success/
+@import ../templates/login/
+@import ../templates/home/
+@import ../templates/space-module/
+@import ../templates/monthly-calendar/
+@import ../templates/weekly-calendar/
+@import ../templates/daily-timetable/
