--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-design/templates/register-success/index.html
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-design/templates/register-success/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="architecture, space, housing, social housing, collective housing, shared space">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=B612 Mono' rel='stylesheet'>
-    <link rel="stylesheet" href="style/index.css" type="text/css">
+    <link rel="stylesheet" href="../../style/index.css" type="text/css">
     <title>e-cohabitat</title>
 
 </head>
@@ -17,7 +17,7 @@
     <header class="header hidden">
 
         <div>
-            <img src="./img/logo.svg" alt="e-COHABITAT project logo" class="header__logo">
+            <img src="../../img/logo.svg" alt="e-COHABITAT project logo" class="header__logo">
             <nav>
                 <ul class="header__main-menu">
                     <li class="header__item"><a class="header__main-link" href="" title="home">Home</a></li>
@@ -36,29 +36,8 @@
 
     <main class="main">
 
-        <section class="register">
-            <h1 class="register__title">Sign up</h1>
-            <form>
-                <ul>
-                    <li class="register__form-item">
-                        <label><input class="register__form-input" type="text" name="name" placeholder="name"/></label>
-                    </li>
-                    <li class="register__form-item">
-                        <label><input class="register__form-input" type="text" name="surname" placeholder="surname" /></label>
-                    </li>
-                    <li class="register__form-item">
-                        <label><input class="register__form-input" type="email" name="email" placeholder="email"/></label>
-                    </li>
-                    <li class="register__form-item">
-                        <label><input class="register__form-input" type="password" name="password" placeholder="password"/></label>
-                    </li>
-                    <li class="register__form-item">
-                        <label><input class="register__form-input" type="password" name="repassword" placeholder="repeat password"/></label>
-                    </li>
-                    <button class="register__form-button">Register</button>
-                </ul>
-            </form>
-            <a href="" class="register__back-link"><i class="fas fa-arrow-left"></i> Go back</a>
+        <section class="register-success">
+            <p>User successfully registered! You can now proceed to <a class="register-success__link" href="" >Sign in</a></p>
         </section>
 
     </main>
@@ -66,7 +45,7 @@
     <footer class="footer hidden">
  
         <ul class="footer__menu">
-            <li class="footer__item">e-cohabitat <time datetime="2019">· 2019</time></li>
+            <li class="footer__item">e-cohabitat · 2019</time></li>
             <li class="footer__item"><a class="footer__link" href="#" title="Terms of Service">Terms of Service</a></li>
             <li class="footer__item"><a class="footer__link" href="#" title="Copyright">Copyright</a></li>
             <li class="footer__item"><a class="footer__link" href="#" title="Privacy Policy">Privacy Policy</a></li>
