--- a/staff/oihane-unciti/my-project/desing/html/register-modal.sass
+++ b/staff/oihane-unciti/my-project/desing/html/register-modal.sass
@@ -23,6 +23,8 @@
   float: right
   font-size: 28px
   font-weight: bold
+  margin-top: -20px
+  margin-right: 10px
 
 
 .close:hover
@@ -32,6 +34,8 @@
   margin-right: 5px
   margin-top: -15px
 
+.register-title
+  text-align: center
 
 .modal__header 
   padding: 2px 16px
@@ -44,8 +48,7 @@
     display: flex
     flex-direction: column
 
-label
-  width: 100%
+
 input
   width: 100%
-
+  margin: 2px
