--- a/staff/lluis-agusti/democratum/design/style/index.sass
+++ b/staff/lluis-agusti/democratum/design/style/index.sass
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 320px) and (max-width: 720px)
+@media only screen and (min-width: 700px) and (max-width: 1020px)
 
 *
     padding: 0
@@ -8,6 +8,7 @@
 .body
     width: 100vw
     font-family: 'Roboto', Arial, Helvetica, sans-serif
+    background-color: #6495ED
 
 .main
     width: 100vw
@@ -51,7 +52,7 @@
 .form
     margin-top: 2rem
 
-input
+.input
     width: 100%
     height: 1.5rem
     margin: 0.2rem 0 1rem 0
