--- a/staff/nestor-llorens/skycaching/design/index.sass
+++ b/staff/nestor-llorens/skycaching/design/index.sass
@@ -5,8 +5,29 @@
     display: grid
     grid-template-rows: 20% 80%
 
-    &__main
-        height: 100vh
+.main
+    height: 100vh
+
+    &__section
+        font-family: Lato, sans-serif
+        padding: 0 1em 0 1em
+        color: #111111
+        text-align: center
+
+        &-p
+            line-height: 2em
+
+        &-h
+            color: #e5474b
+            line-height: 1.6em
+
+
+        &-register
+            border: 2px solid #e5474b
+            background: none
+            padding: 1em
+            color: #e5474b
+            font-weight: 550
 
 .header
     display: flex
