update with space-register

--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Home/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Home/index.sass
@@ -13,8 +13,12 @@
         margin-top: 1em
     &__logo, &__mobile-menu
         display: none
+    &__square
+        margin: 2em auto
+        border: 5px solid black
+        padding: 2em
     &__space
-        margin: 4em 0 1em 0
+        margin-bottom: 1em
     &__space-add
         margin-bottom: 3em
     &__space-add:hover
@@ -31,19 +35,24 @@
         position: relative
         margin-bottom: 1em
         width: 100%
+        list-style: none
     &__space-reveal 
         position: absolute
         top: 0
         left: 0
         z-index: -1
     &__space-title 
-        position: absolute
-        margin: 1em 0 0 1em
-        font-size: 1rem
+        margin: 2em 0 0 2em
+        font-size: 1.2rem
     &__space-subtitle 
-        position: absolute
-        margin: 3em 0 0 1em
+        margin: .5em 0 0 2em
         font-size: 1rem
+    &__space-address 
+        margin: .5em 0 0 2em
+        font-size: .85rem
+        color: grey
+    &__space-message
+        color: grey 
     &__space-figure 
         margin: 0 0 5px 0
     &__space-img 
