--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Home/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Home/index.sass
@@ -44,13 +44,16 @@
     &__space-title 
         margin: 2em 0 0 2em
         font-size: 1.2rem
+        text-align: left
     &__space-subtitle 
         margin: .5em 0 0 2em
         font-size: 1rem
+        text-align: left
     &__space-address 
         margin: .5em 0 0 2em
-        font-size: .85rem
-        color: grey
+        font-size: .9rem
+        color: lightgrey
+        text-align: left
     &__space-message
         color: grey 
     &__space-figure 
