routing working with dummy components

--- a/staff/juan-bovo/vltra/vltra-app/src/components/Header/style.sass
+++ b/staff/juan-bovo/vltra/vltra-app/src/components/Header/style.sass
@@ -1,12 +1,10 @@
 .header 
   box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1)
   width: 100%
-  z-index: 1
-  height: 10%
-
+  height: 33vh
 
 .user-menu 
-  margin: 30px 0 0 0
+  margin: auto 0
   padding: 0
   width: 30%
   float: right
