update with calendar components (work in progress)

--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Space-register/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Space-register/index.sass
@@ -23,7 +23,7 @@
         margin: 2em auto 1em auto
         padding: .5em
     &__otherOption
-        display: none
+        display: block
         margin: auto
         padding: .5em
         width: 65%
