--- a/staff/albert-fuente/skyshop/skyshop-app/src/components/App/index.sass
+++ b/staff/albert-fuente/skyshop/skyshop-app/src/components/App/index.sass
@@ -525,6 +525,18 @@ label
   padding-right: 2rem
   border: none
 
+.formPanel-submit-explore
+  margin-top: 1rem
+  margin-left: 30%
+  padding: 0.5rem
+  background-color: #49B6E5
+  color: #fff
+  font-size: 1rem
+  padding-left: 2rem
+  padding-right: 2rem
+  border: none
+  text-decoration: none
+
 .formPanel-submit-buy
   margin-top: 1rem
   margin-left: 30%
