update with calendar

--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Week/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Week/index.sass
@@ -1,5 +1,10 @@
 .day
     margin: 0
+    &__header
+        margin: auto
+        display: flex
+        justify-content: space-between
+        width: 30%
     &__title
         display: initial
         font-family: Helvetica, Roboto, sans-serif
