--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Month/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Month/index.sass
@@ -1,5 +1,10 @@
 .month
     margin: 0
+    &__header
+        margin: auto
+        display: flex
+        justify-content: space-between
+        width: 30%
     &__title
         display: initial
         font-family: Helvetica, Roboto, sans-serif
@@ -50,6 +55,9 @@
 .fa-caret-right, .fa-caret-left
     font-size: 1.5rem
     margin: 0 1em
+
+.fa-caret-right:hover, .fa-caret-left:hover
+    color: deeppink
 
 .fa-plus-square:hover, .fa-search:hover
     color: deeppink
