register, login, feedback and sessionStorage ok

--- a/staff/juan-bovo/vltra/vltra-app/src/components/Header/style.sass
+++ b/staff/juan-bovo/vltra/vltra-app/src/components/Header/style.sass
@@ -13,12 +13,16 @@
   border: 1px solid gray
 
 
-.user-menu__auth-option-link
+.user-menu__auth-option-link, .user-menu__user-option
   display: block
   padding: 20px 20px
   text-decoration: none
   border: 1px solid lightgray
   color: rgb(60, 60, 60)
+
+.user-menu__user-option
+  font-style: italic
+  font-weight: bold
 
 
 .user-menu__auth-option-link:hover
