--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/style/index.sass
@@ -4,6 +4,7 @@
 @import ../components/Login
 @import ../components/Register
 @import ../components/MyLineup
+@import ../components/PlayerResultLineup
 @import ../components/InitialHeader
 
     
