--- a/staff/juan-bovo/vltra/vltra-app/src/components/App/style.sass
+++ b/staff/juan-bovo/vltra/vltra-app/src/components/App/style.sass
@@ -6,5 +6,9 @@
   font-family: "Red Hat Display", sans-serif
   box-sizing: border-box
 
+// #root
+//   background: linear-gradient(to right, red, purple)
+
 body
-    border: 1rem solid skyblue
+  border: 1px solid black
+  margin-bottom: 6.5%
