--- a/staff/juan-bovo/vltra/vltra-app/src/components/Footer/style.sass
+++ b/staff/juan-bovo/vltra/vltra-app/src/components/Footer/style.sass
@@ -1,16 +1,17 @@
 .footer
     display: block
     clear: both
-    margin-top: 20px
-    border-top: 1px solid lightgray
-    padding: 20px
+    position: fixed
+    left: 0
+    bottom: 0
+    padding: 2% 5%
     width: 100%
     height: 5%
     text-align: right
     font-weight: bold
-    color: darkgrey
+    color: white
+    background-color: rgba(113, 80, 147, 0.8)
 
 @media (min-width: 48em)
     .footer
         text-align: center
-        border-top: 1rem solid skyblue
