--- a/staff/albert-fuente/skyshop/skyshop-app/src/components/App/index.sass
+++ b/staff/albert-fuente/skyshop/skyshop-app/src/components/App/index.sass
@@ -56,6 +56,9 @@
 .fa-cart-plus
   color: #333
 
+.green
+  color: green
+
 
 .li--title
   font-size: 0.8em
@@ -455,7 +458,7 @@ input
   text-decoration: none
   color: white
   font-size: 0.8em
-  margin-right: 0.5rem
+  margin-right: 8.5rem
   background-color: rgba(241, 239, 235, 0.3)
   width: 5rem
   align-self: center
@@ -611,18 +614,22 @@ label
 
 img
   width: 100%
-  border-radius: 5%
+  border-radius: 7%
 
 .product-image
   grid-area: x
 
 .product-price
-  font-weight: bold
-  grid-area: y
+  font-size: 1rem
+  padding: 1rem
+  margin-left: 2.5rem
+  grid-area: z
 
 .product-description
   margin-top: 1rem
-  grid-area: z
+  margin-left: 2.5rem
+  font-weight: bold
+  grid-area: y
 
 .product
   margin: 1.5rem
@@ -751,3 +758,11 @@ img
   display: flex
   background-color: white
   border: 2px solid #009ee2
+
+.productAvailable
+  background-color: #333
+  color: #fff
+
+.productRemoved
+  background-color: #BD2031
+  color: #fff
