--- a/staff/juan-bovo/vltra/vltra-app/src/components/Main/style.sass
+++ b/staff/juan-bovo/vltra/vltra-app/src/components/Main/style.sass
@@ -13,6 +13,20 @@ main
     border: 1px solid lightgray
     height: 10em
     overflow: hidden
+    margin-top: 3%
+
+.mosaic-grid__bookmark-button
+    color: black
+    background-color: transparent
+    border: none
+    font-size: 2em
+    width: 10%
+    position: absolute
+    right: 0%
+    top: 1%
+
+.mosaic-grid__bookmark-button:hover
+    color: gold
 
 .mosaic-grid__read-more, .mosaic-grid__rank
     position: absolute
